Added Restaurant Lambda function

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "license": "ISC",
     "dependencies": {
         "bluebird": "^3.5.3",
-        "co": "^4.6.0"
+        "co": "^4.6.0",
+        "serverless-pseudo-parameters": "^2.2.0"
+    },
+    "devDependencies": {
+        "aws-sdk": "^2.368.0"
     }
 }
