--- a/serverless.yml
+++ b/serverless.yml
@@ -2,11 +2,16 @@
 
 service: big-mouth 
 
-
+plugins:
+  - serverless-pseudo-parameters
 
 provider:
   name: aws
   runtime: nodejs8.10
+  iamRoleStatements: 
+    - Effect: Allow
+      Action: dynamodb:scan
+      Resource: arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/restaurants
 
 
 functions:
@@ -16,5 +21,32 @@ functions:
       - http:
           path: /
           method: get
+  get-restaurants:
+    handler: functions/get-restaurants.handler
+    events:
+      - http:
+          path: /restaurants/
+          method: get
+    environment:
+      restaurants_table: restaurants
+
+resources:
+  Resources:
+    restaurantsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: restaurants
+        AttributeDefinitions:
+          - AttributeName: name
+            AttributeType: S
+        KeySchema:
+          - AttributeName: name
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+
+      
+        
 
 
