Added Template to dsiplay the restaurants on the Index Page.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "dependencies": {
         "bluebird": "^3.5.3",
         "co": "^4.6.0",
-        "serverless-pseudo-parameters": "^2.2.0"
+        "mustache": "^3.0.1",
+        "serverless-pseudo-parameters": "^2.2.0",
+        "superagent": "^4.0.0",
+        "superagent-promise": "^1.1.0"
     },
     "devDependencies": {
         "aws-sdk": "^2.368.0"
