--- a/serverless.yml
+++ b/serverless.yml
@@ -21,6 +21,8 @@ functions:
       - http:
           path: /
           method: get
+    environment:
+      restaurants_api: https://gkpw0c8evl.execute-api.us-east-1.amazonaws.com/dev/restaurants
   get-restaurants:
     handler: functions/get-restaurants.handler
     events:
